Moved profiles back. tidy pom and source formatting.