@@ -231,693 +231,4 @@
 			</plugin>			
 		</plugins>
 	</reporting>
-
-	<profiles>
-		<profile>
-			<id>strict</id>
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-toolchains-plugin</artifactId>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<configuration>
-							<rules>
-								<banTransitiveDependencies>
-									<excludes>
-										<exclude>*:*:*:*:test</exclude>
-										<exclude>*:*:*:*:system</exclude>
-									</excludes>
-								</banTransitiveDependencies>
-								<!-- <dependencyConvergence /> --> <!-- can't configure dependencyConvergence to ignore test dependencies ... -->
-								<requireMavenVersion>
-									<version>${version.min.maven}</version>
-								</requireMavenVersion>
-							</rules>
-							<fail>true</fail>
-						</configuration>
-						<executions>
-							<execution>
-								<id>strict-enforce</id>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.revapi</groupId>
-						<artifactId>revapi-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>strict-semver</id>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>tidy-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>strict-pom</id>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.owasp</groupId>
-						<artifactId>dependency-check-maven</artifactId>
-						<configuration>
-							<failBuildOnAnyVulnerability>true</failBuildOnAnyVulnerability>
-						</configuration>
-						<executions>
-							<execution>
-								<id>strict-owasp</id>
-								<goals>
-									<goal>check</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>net.revelc.code.formatter</groupId>
-						<artifactId>formatter-maven-plugin</artifactId>
-						<configuration>
-							<configFile>eclipse/formatter.xml</configFile>
-						</configuration>
-						<executions>
-							<execution>
-								<id>strict-format</id>
-								<goals>
-									<goal>validate</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>tidy</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-
-			<build>
-				<defaultGoal>clean install</defaultGoal>
-
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-invoker-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>tidy-pom</id>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<phase>validate</phase>
-								<configuration>
-									<goals>
-										<goal>tidy:pom</goal>
-									</goals>
-									<debug>false</debug>
-									<suppressSummaries>true</suppressSummaries>
-									<noLog>true</noLog>
-									<pom>${project.basedir}/pom.xml</pom>
-									<cloneProjectsTo>${project.build.directory}/tidy</cloneProjectsTo>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-antrun-plugin</artifactId>
-						<version>1.8</version>
-						<executions>
-							<execution>
-								<id>copy-tidy-pom</id>
-								<goals>
-									<goal>run</goal>
-								</goals>
-								<phase>initialize</phase>
-								<configuration>
-									<target>
-										<copy todir="${project.basedir}">
-											<fileset dir="${project.build.directory}/tidy/" includes="pom.xml" />
-										</copy>
-									</target>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>net.revelc.code.formatter</groupId>
-						<artifactId>formatter-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>tidy-format</id>
-								<goals>
-									<goal>format</goal>
-								</goals>
-								<phase>process-sources</phase>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk-oracle</id>
-			
-			<activation>
-				<activeByDefault>true</activeByDefault>
-			</activation>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-toolchains-plugin</artifactId>
-						<configuration>
-							<toolchains>
-								<jdk>
-									<version>${maven.compiler.target}</version>
-									<vendor>oracle</vendor>
-								</jdk>
-							</toolchains>
-						</configuration>
-					</plugin>				
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk-azul</id>
-			
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-toolchains-plugin</artifactId>
-						<configuration>
-							<toolchains>
-								<jdk>
-									<version>${maven.compiler.target}</version>
-									<vendor>azul</vendor>
-								</jdk>
-							</toolchains>
-						</configuration>
-					</plugin>				
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk-openjdk</id>
-			
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-toolchains-plugin</artifactId>
-						<configuration>
-							<toolchains>
-								<jdk>
-									<version>${maven.compiler.target}</version>
-									<vendor>openjdk</vendor>
-								</jdk>
-							</toolchains>
-						</configuration>
-					</plugin>				
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>jdk-ibm</id>
-			
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-toolchains-plugin</artifactId>
-						<configuration>
-							<toolchains>
-								<jdk>
-									<version>${maven.compiler.target}</version>
-									<vendor>ibm</vendor>
-								</jdk>
-							</toolchains>
-						</configuration>
-					</plugin>				
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<!-- 
-				Because of https://maven.apache.org/guides/mini/guide-configuring-plugins.html#Using_the_reporting_Tag_VS_build_Tag
-				We must add revapi plugin to build section such that revapi report can't pick up it's API analyser dependency via pluginManagement
-				
-				Also issue with PiTest report failing as can't find report in pom packaged module
-				
-				JavaDoc used in release and site, want to share the UML doclet
-			-->
-			<id>report</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-
-			<properties>
-				<earcam.profile.report>true</earcam.profile.report>
-			</properties>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.revapi</groupId>
-						<artifactId>revapi-maven-plugin</artifactId>
-					</plugin>
-
-					<plugin>
-						<groupId>org.pitest</groupId>
-						<artifactId>pitest-maven</artifactId>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>site</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-
-			<properties>
-				<earcam.profile.site>true</earcam.profile.site>
-			</properties>
-
-			<build>
-				<defaultGoal>site</defaultGoal>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>enforce-active-profiles</id>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireProperty>
-											<property>earcam.profile.analyse</property>
-											<regex>^true$</regex>
-											<message>Profile "analyse" must be active</message>
-										</requireProperty>
-
-										<requireProperty>
-											<property>earcam.profile.report</property>
-											<regex>^true$</regex>
-											<message>Profile "report" must be active</message>
-										</requireProperty>
-									</rules>
-									<fail>true</fail>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-site-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>site</id>
-								<goals>
-									<goal>site</goal>
-								</goals>
-								<phase>site</phase>
-							</execution>
-
-							<execution>
-								<id>site-stage</id>
-								<goals>
-									<goal>stage</goal>
-								</goals>
-								<phase>post-site</phase>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>publish-site</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-
-			<build>
-				<defaultGoal>site:deploy</defaultGoal>
-				
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>enforce-active-profiles</id>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireProperty>
-											<property>earcam.profile.site</property>
-											<regex>^true$</regex>
-											<message>Profile "site" must be active</message>
-										</requireProperty>
-									</rules>
-									<fail>true</fail>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>sonar</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			
-			<properties>
-				<sonar.sourceEncoding>${project.build.sourceEncoding}</sonar.sourceEncoding>
-				<sonar.pitest.mode>reuseReport</sonar.pitest.mode>
-				
-				<earcam.profile.sonar>true</earcam.profile.sonar>
-			</properties>
-
-			<build>
-				<defaultGoal>clean install org.sonarsource.scanner.maven:sonar-maven-plugin:LATEST:sonar</defaultGoal>
-				
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>enforce-active-profiles</id>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireProperty>
-											<property>earcam.profile.analyse</property>
-											<regex>^true$</regex>
-											<message>Profile "analyse" must be active</message>
-										</requireProperty>
-									</rules>
-									<fail>true</fail>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-
-		<profile>
-			<id>analyse</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			
-			<properties>
-				<earcam.profile.analyse>true</earcam.profile.analyse>
-			</properties>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.jacoco</groupId>
-						<artifactId>jacoco-maven-plugin</artifactId>
-						<executions>
-							<execution>
-								<goals>
-									<goal>prepare-agent</goal>
-								</goals>
-								<configuration>
-									<propertyName>surefire.argLine</propertyName>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>${surefire.argLine} -XX:MaxPermSize=512m</argLine>
-						</configuration>
-					</plugin>					
-
-					<plugin>
-						<groupId>org.pitest</groupId>
-						<artifactId>pitest-maven</artifactId>
-						<executions>
-							<execution>
-								<goals>
-									<goal>mutationCoverage</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>			
-		</profile>	
-
-		<profile>
-			<id>distribute</id>
-			<!-- requires GPG keypass, this should be in settings.xml in a profile called "signature" -->
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-
-			<properties>
-				<sonar.sourceEncoding>${project.build.sourceEncoding}</sonar.sourceEncoding>
-				<sonar.pitest.mode>reuseReport</sonar.pitest.mode>
-
-				<earcam.profile.distribute>true</earcam.profile.distribute>
-			</properties>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>enforce-active-profiles</id>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireProperty>
-											<property>earcam.profile.signature</property>
-											<regex>^true$</regex>
-											<message>Profile "signature" must be active</message>
-										</requireProperty>
-									</rules>
-									<fail>true</fail>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-gpg-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>sign-artifacts</id>
-								<phase>verify</phase>
-								<goals>
-									<goal>sign</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-					
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-source-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>attach-sources</id>
-								<goals>
-									<goal>jar</goal>
-									<goal>test-jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-javadoc-plugin</artifactId>
-						<executions>
-							<execution>
-								<goals>
-									<goal>jar</goal>
-									<goal>test-jar</goal>
-								</goals>
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>	
-
-		<profile>
-			<id>release-scm</id>
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<inherited>true</inherited>
-						<executions>
-							<execution>
-								<id>enforce-no-snapshots</id>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireReleaseDeps>
-											<message>Snapshots dependencies NOT permitted for release</message>
-										</requireReleaseDeps>
-										<requireReleaseVersion>
-											<message>Snapshot version for project NOT permitted for release</message>
-										</requireReleaseVersion>
-									</rules>
-									<fail>true</fail>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-release-plugin</artifactId>
-						<configuration>
-							<username>earcam</username>
-							<tagNameFormat>v@{project.version}</tagNameFormat>
-							<resume>false</resume>
-							<pushChanges>false</pushChanges>
-							<autoVersionSubmodules>true</autoVersionSubmodules>
-							<autoVersionSubmodules>true</autoVersionSubmodules>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>	
-
-		<profile>
-			<id>publish</id>
-			<!-- requires Sonatype credentials, this should be in settings.xml in server section -->
-			<activation>
-				<activeByDefault>false</activeByDefault>
-			</activation>
-			<build>
-				<defaultGoal>deploy</defaultGoal>
-			
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-enforcer-plugin</artifactId>
-						<executions>
-							<execution>
-								<id>enforce-active-profiles</id>
-								<goals>
-									<goal>enforce</goal>
-								</goals>
-								<configuration>
-									<rules>
-										<requireProperty>
-											<property>earcam.profile.distribute</property>
-											<regex>^true$</regex>
-											<message>Profile "distribute" must be active</message>
-										</requireProperty>
-									</rules>
-									<fail>true</fail>
-								</configuration>
-							</execution>
-						</executions>
-					</plugin>
-					
-					<plugin>
-						<groupId>org.sonatype.plugins</groupId>
-						<artifactId>nexus-staging-maven-plugin</artifactId>
-						<extensions>true</extensions>
-						<configuration>
-							<serverId>ossrh</serverId>
-							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
-							<autoReleaseAfterClose>false</autoReleaseAfterClose>
-						</configuration>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>	
-	</profiles>
 </project>
